ardupilot_ws/logs/my_APMrover/build.make.013.log.stderr
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_APMrover/src/PN_node.cpp:30:1: error: ‘geometry_msgs’ does not name a type
 geometry_msgs::Twist velocities;
 ^
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_APMrover/src/PN_node.cpp: In function ‘void pn()’:
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_APMrover/src/PN_node.cpp:35:3: error: ‘velocities’ was not declared in this scope
   velocities.linear.x = Vk*(a-x)/sqrt((a-x)*(a-x) + (b-y)*(b-y));
   ^
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_APMrover/src/PN_node.cpp: In function ‘int main(int, char**)’:
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_APMrover/src/PN_node.cpp:65:36: error: ‘geometry_msgs’ was not declared in this scope
   ros::Publisher pub = n.advertise<geometry_msgs::Twist>("/mavros/setpoint_velocity/cmd_vel", 1000);
                                    ^
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_APMrover/src/PN_node.cpp:65:26: error: parse error in template argument list
   ros::Publisher pub = n.advertise<geometry_msgs::Twist>("/mavros/setpoint_velocity/cmd_vel", 1000);
                          ^
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_APMrover/src/PN_node.cpp:65:99: error: no matching function for call to ‘ros::NodeHandle::advertise(const char [34], int)’
   ros::Publisher pub = n.advertise<geometry_msgs::Twist>("/mavros/setpoint_velocity/cmd_vel", 1000);
                                                                                                   ^
In file included from /opt/ros/kinetic/include/ros/ros.h:45:0,
                 from /home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_APMrover/src/PN_node.cpp:19:
/opt/ros/kinetic/include/ros/node_handle.h:249:15: note: candidate: template<class M> ros::Publisher ros::NodeHandle::advertise(const string&, uint32_t, bool)
     Publisher advertise(const std::string& topic, uint32_t queue_size, bool latch = false)
               ^
/opt/ros/kinetic/include/ros/node_handle.h:249:15: note:   template argument deduction/substitution failed:
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_APMrover/src/PN_node.cpp:65:99: error: template argument 1 is invalid
   ros::Publisher pub = n.advertise<geometry_msgs::Twist>("/mavros/setpoint_velocity/cmd_vel", 1000);
                                                                                                   ^
In file included from /opt/ros/kinetic/include/ros/ros.h:45:0,
                 from /home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_APMrover/src/PN_node.cpp:19:
/opt/ros/kinetic/include/ros/node_handle.h:315:13: note: candidate: template<class M> ros::Publisher ros::NodeHandle::advertise(const string&, uint32_t, const SubscriberStatusCallback&, const SubscriberStatusCallback&, const VoidConstPtr&, bool)
   Publisher advertise(const std::string& topic, uint32_t queue_size,
             ^
/opt/ros/kinetic/include/ros/node_handle.h:315:13: note:   template argument deduction/substitution failed:
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_APMrover/src/PN_node.cpp:65:99: error: template argument 1 is invalid
   ros::Publisher pub = n.advertise<geometry_msgs::Twist>("/mavros/setpoint_velocity/cmd_vel", 1000);
                                                                                                   ^
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_APMrover/src/PN_node.cpp:73:17: error: ‘velocities’ was not declared in this scope
     pub.publish(velocities);
                 ^
make[2]: *** [CMakeFiles/PN_node.dir/src/PN_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/PN_node.dir/all] Error 2
make: *** [all] Error 2
